# ai-driven-network-remediation

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/actions/kind/: action.yaml
.github/workflows/: pr-checks.yml
docs/: LIGHTSPEED-DEMO-SCRIPT.md  autorag.md  chatbot-bff.md  manual-deploy.md
hub/agent-service/: pyproject.toml
hub/agent-service/tests/: helpers.py  test_analyze.py  test_audit.py  test_enrich.py  test_escalate.py  test_graph.py  test_kafka_consumer.py  test_lightspeed_node.py  test_mcp_call.py  test_models.py  test_normalize.py  test_rag_retrieval.py  test_server.py
hub/autorag/: test-data.json
hub/chatbot-service/tests/: conftest.py  test_endpoints.py  test_helpers.py
hub/helm/: values.yaml
hub/helm/templates/: agent-service.yaml  ingestion-pipeline.yaml  lightspeed-networkpolicy.yaml  lightspeed-secret.yaml
hub/infra/aap-mock/: Containerfile  k8s.yaml  main.py
hub/infra/autorag/: values.yaml
hub/infra/lokistack/: README.md
hub/infra/milvus/: values.yaml
hub/mcp-servers/: Containerfile.openshift
issues/: 03-plain-text-fallback.md  04-level-normalization.md
issues/done/: 01-canonical-json-golden-path.md  01-mcp-call-foundation-escalate.md  02-kafka-offset-passthrough.md
scripts/ci/: install-openshift-ai.sh
scripts/servicenow-bootstrap/: pyproject.toml
scripts/servicenow-bootstrap/src/servicenow_bootstrap/: __init__.py  create_incident_test_data.py  create_noc_agent_api_key.py  create_noc_agent_user.py  orchestrator.py  servicenow_client.py  setup_validations.py  wake_up_pdi.py
(+84 files in other folders)
