[project]
name = "servicenow-bootstrap"
version = "0.1.0"
description = "ServiceNow PDI setup automation for the AI-driven network remediation quickstart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.0",
]

[dependency-groups]
wake = [
    "playwright>=1.40.0",
]
dev = [
    "black>=25.1.0",
    "isort>=5.13.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_bootstrap"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
